Added Agency Module

--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -1,6 +1,9 @@
 NotEmpty=This field is required.
-Size.userForm.username=Please use between 6 and 32 characters.
-Duplicate.userForm.username=Someone already has that username.
+Size.userForm.username=Please input between 6 and 32 characters.
+Duplicate.userForm.username=Pick a different name. Someone already has that username.
 Size.userForm.password=Try one with at least 8 characters.
 Diff.userForm.passwordConfirm=These passwords don't match.
 NoRoleSelected=At least one ROLE must be selected.
+
+Size.agencyForm.agencyname=Please input between 6 and 32 characters.
+Duplicate.agencyForm.agencyname=Pick a different name. This agency name is already present in the system.
