Added program area module. formatting. table made compact

--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -7,3 +7,6 @@ NoRoleSelected=At least one ROLE must be selected.
 
 Size.agencyForm.agencyname=Please input between 6 and 32 characters.
 Duplicate.agencyForm.agencyname=Pick a different name. This agency name is already present in the system.
+
+Size.programareaForm.programareaname=Please input between 6 and 32 characters.
+Duplicate.programareaForm.programareaname=Pick a different name. This agency name is already present in the system.
