--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -71,9 +71,9 @@ spring.datasource.tomcat.min-idle=15
 #spring.mail.test-connection=false # Whether to test that the mail server is available on startup.
 #spring.mail.username= # Login user of the SMTP server.
 
-# =================================
+# ============================
 # = LOGGING CONFIGURATION HERE
-# =================================
+# ============================
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
@@ -83,3 +83,8 @@ spring.datasource.tomcat.min-idle=15
 
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
+
+# =======================
+# = SOME FANCY STUFF HERE
+# =======================
+spring.banner.location=classpath:banner.txt
