--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -4,9 +4,12 @@ Duplicate.userForm.username=Pick a different name. Someone already has that user
 Size.userForm.password=Try one with at least 8 characters.
 Diff.userForm.passwordConfirm=These passwords don't match.
 NoRoleSelected=At least one ROLE must be selected.
+NoProgramareaSelected=At least one Program Area must be selected.
 
 Size.agencyForm.agencyname=Please input between 6 and 32 characters.
 Duplicate.agencyForm.agencyname=Pick a different name. This agency name is already present in the system.
+
+NoAgencySelected=At least one Agency must be selected.
 
 Size.programareaForm.programareaname=Please input between 6 and 32 characters.
 Duplicate.programareaForm.programareaname=Pick a different name. This agency name is already present in the system.
