--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -7,9 +7,12 @@ NoRoleSelected=At least one ROLE must be selected.
 NoProgramareaSelected=At least one Program Area must be selected.
 
 Size.agencyForm.agencyname=Please input between 6 and 32 characters.
-Duplicate.agencyForm.agencyname=Pick a different name. This agency name is already present in the system.
+Duplicate.agencyForm.agencyname=Pick a different name. This Agency name is already present in the system.
 
 NoAgencySelected=At least one Agency must be selected.
 
 Size.programareaForm.programareaname=Please input between 6 and 32 characters.
-Duplicate.programareaForm.programareaname=Pick a different name. This agency name is already present in the system.
+Duplicate.programareaForm.programareaname=Pick a different name. This Programarea name is already present in the system.
+
+Size.casetypeForm.casetypename=Please input between 6 and 32 characters.
+Duplicate.casetypeForm.casetypename=Pick a different name. This Casetype name is already present in the system.
