--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -16,3 +16,10 @@ Duplicate.programareaForm.programareaname=Pick a different name. This Programare
 
 Size.casetypeForm.casetypename=Please input between 6 and 32 characters.
 Duplicate.casetypeForm.casetypename=Pick a different name. This Casetype name is already present in the system.
+
+NoCasetypeSelected=At least one Casetype must be selected.
+Size.casestepForm.casestepname=Please input between 6 and 32 characters.
+Duplicate.casestepForm.casestepname=Pick a different name. This Casestep name is already present in the system.
+
+Size.documenttypeForm.documenttypename=Please input between 6 and 32 characters.
+Duplicate.documenttypeForm.documenttypename=Pick a different name. This Document Type is already present in the system.
