--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,6 +26,7 @@ server.port=8080
 spring.mvc.view.prefix: /WEB-INF/views/
 spring.mvc.view.suffix: .jsp
 #spring.mvc.favicon.enabled = false
+spring.main.allow-bean-definition-overriding=true
 
 # ===============================
 # = SPRING JPA CONFIGURATION HERE
@@ -45,7 +46,7 @@ spring.messages.basename=validation
 # ======================================
 # = SPRING DATASOURCE CONFIGURATION HERE
 # ======================================
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/springbootrocks?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
