--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,11 +33,10 @@ spring.main.allow-bean-definition-overriding=true
 # ===============================
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL55Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.show_sql=false
 spring.jpa.properties.hibernate.format_sql=false
-#spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
 # ==============================================
 # = SPRING ERROR MESSAGE FILE CONFIGURATION HERE
 # ==============================================
@@ -82,8 +81,8 @@ spring.datasource.tomcat.min-idle=15
 # = File Upload/Download realated CONFIGURATION HERE
 # ==================================================
 
-spring.servlet.multipart.max-file-size=5MB
-spring.servlet.multipart.max-request-size=5MB
+#spring.servlet.multipart.max-file-size=5MB
+#spring.servlet.multipart.max-request-size=5MB
 
 # =======================
 # = SOME FANCY STUFF HERE
