--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -46,7 +46,8 @@ spring.messages.basename=validation
 # = SPRING DATASOURCE CONFIGURATION HERE
 # ======================================
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/springbootrocks?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/springbootrocks
+#?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.tomcat.max-wait=20000
