--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,7 +27,7 @@ spring.mvc.view.prefix: /WEB-INF/views/
 spring.mvc.view.suffix: .jsp
 #spring.mvc.favicon.enabled = false
 spring.main.allow-bean-definition-overriding=true
-
+spring.mvc.static-path-pattern=/resources/**
 # ===============================
 # = SPRING JPA CONFIGURATION HERE
 # ===============================
