--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -46,7 +46,7 @@ spring.messages.basename=validation
 # = SPRING DATASOURCE CONFIGURATION HERE
 # ======================================
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/springbootrocks
+spring.datasource.url=jdbc:mysql://localhost:3306/springbootrocks?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 #?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
