--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,14 +28,21 @@ spring.mvc.view.suffix: .jsp
 #spring.mvc.favicon.enabled = false
 spring.main.allow-bean-definition-overriding=true
 spring.mvc.static-path-pattern=/resources/**
+
+
 # ===============================
 # = SPRING JPA CONFIGURATION HERE
 # ===============================
-spring.jpa.hibernate.ddl-auto=update
+# ForH2
+spring.jpa.hibernate.ddl-auto=create-drop
+# For MYSQL
+# spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.properties.hibernate.show_sql=false
 spring.jpa.properties.hibernate.format_sql=false
+
 
 # ==============================================
 # = SPRING ERROR MESSAGE FILE CONFIGURATION HERE
@@ -45,19 +52,31 @@ spring.messages.basename=validation
 # ======================================
 # = SPRING DATASOURCE CONFIGURATION HERE
 # ======================================
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/springbootrocks?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+# UNCOMMENT MYSQL DEPENDENCY IN POM.XML FIRST BEFORE USING IT
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/springbootrocks?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 #?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.tomcat.max-wait=20000
-spring.datasource.tomcat.max-active=50
-spring.datasource.tomcat.max-idle=20
-spring.datasource.tomcat.min-idle=15
-#spring.datasource.data=dbscript.sql
-#spring.datasource.data-username=root
-#spring.datasource.data-password=root
-#spring.datasource.initialization-mode=always
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.datasource.tomcat.max-wait=20000
+#spring.datasource.tomcat.max-active=50
+#spring.datasource.tomcat.max-idle=20
+#spring.datasource.tomcat.min-idle=15
+##spring.datasource.data=dbscript.sql
+##spring.datasource.data-username=root
+##spring.datasource.data-password=root
+spring.datasource.initialization-mode=always
+
+# ======================================
+# = SPRING H2 DB CONFIGURATION HERE
+# ======================================
+spring.datasource.url=jdbc:h2:mem:springbootrocks
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.h2.console.enabled=true
+
+# Access H2 here - http://localhost:8080/h2-console
 
 # =================================
 # = MORE (EMAIL) CONFIGURATION HERE
