--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,13 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.7.RELEASE</version>
+		<version>2.1.8.RELEASE</version>
 		<relativePath />
 	</parent>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.8</java.version>
+		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
 	</properties>
 
 	<dependencies>
@@ -62,7 +63,7 @@
 		<dependency>
 			<groupId>org.webjars</groupId>
 			<artifactId>webjars-locator</artifactId>
-			<version>0.36</version>
+			<version>0.37</version>
 		</dependency>
 		<dependency>
 			<groupId>org.webjars</groupId>
@@ -87,7 +88,7 @@
 		<dependency>
 			<groupId>org.webjars</groupId>
 			<artifactId>font-awesome</artifactId>
-			<version>5.9.0</version>
+			<version>5.10.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.webjars</groupId>
