--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -54,8 +54,7 @@ spring.messages.basename=validation
 # ======================================
 # UNCOMMENT MYSQL DEPENDENCY IN POM.XML FIRST BEFORE USING IT
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://localhost:3306/springbootrocks?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-#?useSSL=false
+#spring.datasource.url=jdbc:mysql://localhost:3306/springbootrocks?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 #spring.datasource.username=root
 #spring.datasource.password=root
 #spring.datasource.tomcat.max-wait=20000
@@ -65,7 +64,7 @@ spring.messages.basename=validation
 ##spring.datasource.data=dbscript.sql
 ##spring.datasource.data-username=root
 ##spring.datasource.data-password=root
-spring.datasource.initialization-mode=always
+#spring.datasource.initialization-mode=always
 
 # ======================================
 # = SPRING H2 DB CONFIGURATION HERE
@@ -108,4 +107,4 @@ spring.h2.console.enabled=true
 # =======================
 # = SOME FANCY STUFF HERE
 # =======================
-spring.banner.location=classpath:banner.txt
+#spring.banner.location=classpath:banner.txt
